--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
             <h3>SHOPINTIN</h3>
 
             <nav>
-                <a href="#banner-section">Home</a>
-                <a href="#product">Products</a>
-                <a href="#place-order">Order</a>
-                <a href="#contact-section">Contact us</a>
+                <a href="#banner-section"><img src="home.png" alt="" width="23"><span>Home</span></a>
+                <a href="#product"><img src="product.png" alt="" width="23"><span>Products</span></a>
+                <a href="#place-order"><img src="order.png" alt="" width="23"><span>Order</span></a>
+                <a href="#contact-section"><img src="contact.png" alt="" width="23"><span>Contact us</span></a>
             </nav>
 
+
             <button>LOGIN</button>
+
+            <img src="menu.png" alt="" width="25" class="menu">
+
     </header>
 
     <main>
@@ -105,7 +109,7 @@
         <!-- our contact section  -->
 
         <section id="contact-section">
-              <h1>OUR CONTACT</h1>
+                  <h1>OUR CONTACT</h1>
                   <div class="contact-container">
                        <div class="contact-left">
                            <img src="map.png" alt="" width="300">
@@ -131,13 +135,25 @@
 
     </main>
     <footer>
-        <p>&copy;Rights 2023, All Rights Reserved. Designed By Idisi Prosper.</p>
+        <p>&copy;Rights <span class="footerdate">2020</span> All Rights Reserved. Designed By Idisi Prosper.</p>
+
+        <h1 class="time">
+            <span class="hours">3</span> : <span class="minutes">30</span> : <span class="seconds">00</span>
+        </h1>
+
+        <h1>
+            <span class="day">wed</span> / <span class="month">june</span><span class="date">4</span> / <span class="year">2020</span>
+        </h1>
+
+
         <div class="social">
             <img src="instagram2.png" alt="" width="25">
             <img src="facebook2.png" alt="" width="25">
             <img src="google.png" alt="" width="25">
         </div>
     </footer>
+
+    <script src="index.js"></script>
     
 </body>
 </html>
